Settings Overlay Template
- Basic settings template

--- a/src/index.css
+++ b/src/index.css
@@ -159,13 +159,13 @@ p {
 }
 
 .centered-container {
-  width: 500px;
   background: #313131;
   padding: 20px;
   border-radius: 3px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   text-align: center;
   display: grid;
+  height: 70%;
   grid-gap: 5px;
 }
 
