Error Handling & Fixes
- If any setting inputs are empty or null then a red box shadow will appear
- Click on the error inputs and the box shadow will go away
- Fixed error if user didn't select a server directory

--- a/src/index.css
+++ b/src/index.css
@@ -63,6 +63,10 @@ input.error {
   box-shadow: inset 0px 0px 5px #ff2b2b;
 }
 
+.selected-directory.error {
+  box-shadow: inset 0px 0px 5px #ff2b2b;
+}
+
 .buttons-grid {
   display: grid;
   grid-gap: 5px;
