--- a/src/index.css
+++ b/src/index.css
@@ -231,3 +231,32 @@ h3.online {
   padding: 0px;
   margin: 0px;
 }
+
+
+.console-grid {
+  display: grid;
+  grid-template-rows: 1fr auto;
+  grid-gap: 5px;
+  margin: 10px;
+}
+
+.console-content {
+  display: grid;
+  grid-gap: 2px;
+  background-color: #141414;
+  border-radius: 5px;
+  align-content: start;
+}
+
+.console-message {
+  color: #9593D9;
+  font-size: 13px;
+  background-color: #252525;
+  border-radius: 3px;
+}
+
+.console-input-div {
+  display: grid;
+  grid-template-columns: 1fr auto;
+  grid-gap: 3px;
+}
