--- a/src/index.css
+++ b/src/index.css
@@ -86,6 +86,7 @@ button:hover {
 .input-button {
   background-color: #3b4e92;
   padding: 10px 0px;
+  font-size: 14px;
 }
 
 .input-button:hover{
@@ -173,6 +174,17 @@ p {
   height: 70%;
   width: 75%;
   grid-gap: 5px;
+}
+
+.stop-container {
+  background: #313131;
+  padding: 20px;
+  border-radius: 3px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  text-align: center;
+  display: grid;
+  grid-gap: 5px;
+  width: 75%;
 }
 
 h1,h2,h3,h4,h5,h6 {
